src/objects/Receive__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_receiving__c</fullName>
        <label>Date of receiving</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <inlineHelpText>Expenditure for which you are receiving</inlineHelpText>
        <label>Expense</label>
        <referenceTo>Expenditure__c</referenceTo>
        <relationshipLabel>Receives</relationshipLabel>
        <relationshipName>Receives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Received_From__c</fullName>
        <label>Received From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anupam</fullName>
                    <default>true</default>
                    <label>Anupam</label>
                </value>
                <value>
                    <fullName>Biman</fullName>
                </value>
                <value>
                    <fullName>Midhun</fullName>
                </value>
                <value>
                    <fullName>Rahul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Receive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Receiving Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>